# RemoveBG

./: pyproject.toml  removebg.py
