[project]
name = "removebg"
version = "0.1.0"
description = ""
authors = [
    {name = "Vedant Parikh",email = "parikhvedant2003@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "flet[all] (>=0.26.0,<0.27.0)",
    "flet-core (>=0.24.1,<0.25.0)",
    "numpy (>2.1,<3.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "llvmlite (>=0.44.0,<0.45.0)",
    "numba (==0.61.0)",
    "rembg (>=2.0.62,<3.0.0)",
    "onnxruntime (>=1.20.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
